# sqliteman

./: .gitignore  README
Documentation/: CMakeLists.txt  README  kde-chunk.xsl  kde-navig.xsl  kde-style.xsl  kde-ttlpg.xsl  meinproc4.kmdr
Documentation/common/: fdl-license.html  fdl-notice.html  footer.html  kde-default.css
Documentation/docbook/: README.kde
Documentation/docbook/xml-dtd-4.1.2/: calstblx.dtd  dbcentx.mod  dbhierx.mod  dbnotnx.mod  dbpoolx.mod  docbookx.dtd
Documentation/docbook/xml-dtd-4.2/: calstblx.dtd  dbcentx.mod  dbhierx.mod  dbnotnx.mod  dbpoolx.mod  docbookx.dtd  soextblx.dtd
Documentation/docbook/xml-dtd-4.2/ent/: iso-amsa.ent  iso-amsb.ent  iso-amsc.ent  iso-amsn.ent  iso-amso.ent  iso-amsr.ent  iso-box.ent  iso-cyr1.ent  iso-cyr2.ent  iso-dia.ent  iso-grk1.ent  iso-grk2.ent  iso-grk3.ent  iso-grk4.ent  iso-lat1.ent  iso-lat2.ent  iso-num.ent  iso-pub.ent  iso-tech.ent
Documentation/docbook/xsl/: README
Documentation/docbook/xsl/common/: autoidx-ng.xsl  common.xsl  en.xml  eo.xml  et.xml  gentext.xsl  it.xml  l10n.xml  l10n.xsl  labels.xsl  pi.xsl  sr_latin.xml  subtitles.xsl  table.xsl  targets.xsl  titles.xsl
Documentation/docbook/xsl/html/: admon.xsl  autoidx-ng.xsl  autoidx.xsl  autotoc.xsl  biblio.xsl  block.xsl  callout.xsl  changebars.xsl  chunk-code.xsl  chunk-common.xsl  chunk.xsl  chunker.xsl  chunkfast.xsl  chunktoc.xsl  component.xsl  division.xsl  docbook.xsl  ebnf.xsl  footnote.xsl  formal.xsl  glossary.xsl  graphics.xsl  html-rtf.xsl  html.xsl  htmltbl.xsl  index.xsl  info.xsl  inline.xsl  keywords.xsl  lists.xsl  maketoc.xsl  manifest.xsl  math.xsl  oldchunker.xsl  onechunk.xsl  param.xml  param.xsl  param.xweb  pi.xsl  profile-chunk-code.xsl  (+13 more)
Documentation/docbook/xsl/lib/: lib.xml  lib.xsl  lib.xweb
Documentation/en/: CMakeLists.txt  index.docbook
Documentation/pl/: index.docbook
Packagers/: opensuse_svn_rpm.sh  sqliteman.mpi  sqliteman.nsi  sqliteman.spec  svn2dist
Sqliteman/: AUTHORS  CMakeLists.txt  COPYING  README  Sqliteman.pro  sqliteman.desktop
Sqliteman/cmake/modules/: FindQScintilla.cmake  FindSqlite.cmake
Sqliteman/devel-doc/: Doxyfile  Makefile
Sqliteman/osx_tools/: CreateBundle.sh.in
Sqliteman/sqliteman/: CMakeLists.txt  altertabledialog.cpp  altertabledialog.h  altertriggerdialog.cpp  altertriggerdialog.h  alterviewdialog.cpp  alterviewdialog.h  analyzedialog.cpp  analyzedialog.h  analyzedialog.ui  blobpreviewwidget.cpp  blobpreviewwidget.h  blobpreviewwidget.ui  constraintsdialog.cpp  constraintsdialog.h  constraintsdialog.ui  createindexdialog.cpp  createindexdialog.h  createindexdialog.ui  createtabledialog.cpp  createtabledialog.h  createtriggerdialog.cpp  createtriggerdialog.h  createtriggerdialog.ui  createviewdialog.cpp  createviewdialog.h  createviewdialog.ui  database.cpp  database.h  dataexportdialog.cpp  dataexportdialog.h  dataexportdialog.ui  dataviewer.cpp  dataviewer.h  dataviewer.ui  extensionmodel.cpp  extensionmodel.h  helpbrowser.cpp  helpbrowser.h  helpbrowser.ui  (+68 more)
Sqliteman/sqliteman/api/: api.qrc  sqlite.api
Sqliteman/sqliteman/doc/: CMakeLists.txt  doc.qrc
Sqliteman/sqliteman/doc/en/: CMakeLists.txt  apa.html  apas02.html  apas03.html  apas04.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch06s02.html  ch06s03.html  ch06s04.html  ch06s05.html  ch07.html  ch07s02.html  ch07s03.html  ch07s04.html  ch07s05.html  ch07s06.html  ch07s07.html  ch07s08.html  ch07s09.html  ch07s10.html  ch07s11.html  ch07s12.html  ch07s13.html  ch08.html  ch09.html  ch09s02.html  index.html  kde-default.css  license.html  menu.html  results.html  sqleditor.html  sqlite.html  troubleshooting.html  usage-context.html  (+5 more)
Sqliteman/sqliteman/doc/manpages/: CMakeLists.txt  sqliteman.1
Sqliteman/sqliteman/driver/: README  qsql_sqlite.cpp  qsql_sqlite.h  qsqlcachedresult_p.h
Sqliteman/sqliteman/extensions/: CMakeLists.txt  README  compress.c  dummy.c  functions.c  ipv4-ext.c  md5.c  tablefunc.c  test.cpp  test.pro  uuid.c  virtualtext.c
Sqliteman/sqliteman/extensions/icu/: icu.c
Sqliteman/sqliteman/icons/: AUTHORS  CMakeLists.txt  icons.qrc  sqliteman.icns  sqliteman.rc
Sqliteman/sqliteman/qscintilla2/: CMakeLists.txt
Sqliteman/sqliteman/qscintilla2/Qt4/: qsciscintilla.cpp
Sqliteman/sqliteman/qscintilla2/Qt4/Qsci/: qsciglobal.h
Sqliteman/sqliteman/sqlite/: CMakeLists.txt  shell.c  shell.h  sqlite3.c
Sqliteman/sqliteman/sqlparser/: README  tosqlparse.cpp  tosqlparse.h
Sqliteman/sqliteman/ts/: CMakeLists.txt  sqliteman_bg.qm  sqliteman_bg.ts  sqliteman_cs.qm  sqliteman_cs.ts  sqliteman_de.qm  sqliteman_de.ts  sqliteman_en.qm  sqliteman_en.ts  sqliteman_fr.qm  sqliteman_fr.ts  sqliteman_it.qm  sqliteman_it.ts  sqliteman_pl.qm  sqliteman_pl.ts  sqliteman_ru.qm  sqliteman_ru.ts  sqliteman_zh.ts  sqliteman_zh_CN.qm  ts.qrc
logo_design/: logo-original.ai  logo-original.eps  logos-original.ai  logos-original.eps
